Made changes to the events page layout Attempted to change the colour of buttons to yellow Moved the image in the about page by 50px

--- a/CEDAL Website/Charity2/css/style.css
+++ b/CEDAL Website/Charity2/css/style.css
@@ -122,7 +122,7 @@ blockquote:after {
   position: relative;
   display: inline-block;
   padding: 0px 30px;
-  background: #83ba09;
+  background: #eaef0d;
   color: #FFF;
   font-weight: 400;
   height: 45px;
